--- a/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
+++ b/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
@@ -4,9 +4,9 @@
     </div>
     <div class="section">
         <form #f="ngForm" (submit)="save(f.value)">
-            <input type="hidden"  name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
-            <input type="hidden"  name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
-            <input type="hidden"  name="idade" #idade="ngModel" [(ngModel)]="newEvaluation.idade">
+            <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
+            <input type="hidden" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
+            <input type="hidden" name="idade" #idade="ngModel" [(ngModel)]="newEvaluation.idade">
             <table class="section-table">
                 <thead>
                     <tr>
@@ -22,7 +22,8 @@
                             </button>
                         </th>
                         <th class="th-top" *ngIf="addEval">
-                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"  class="data-input">
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
+                                class="data-input">
                         </th>
                     </tr>
                 </thead>
@@ -32,7 +33,8 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].cintura | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].cintura | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura" type="number">
+                            <input class="hidde-arrows" name="cintura" #cintura="ngModel"
+                                [(ngModel)]="newEvaluation.cintura" type="number">
                         </td>
                     </tr>
                     <tr>
@@ -40,7 +42,8 @@
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].quadril | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].quadril | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input  class="hidde-arrows" name="quadril" #quadril="ngModel" [(ngModel)]="newEvaluation.quadril" type="number">
+                            <input class="hidde-arrows" name="quadril" #quadril="ngModel"
+                                [(ngModel)]="newEvaluation.quadril" type="number">
                         </td>
                     </tr>
                     <tr>
@@ -80,39 +83,42 @@
         </form>
         <br />
         <hr />
-        <h4 style="text-align: center; color: blue;">
-            {{selectedEvaluation.data | date:'dd/LL/yyyy'}}
-        </h4>
-        <div *ngIf="showChart">
-            <div style="text-align: center; color: blue;">
-                <div>
-                    <mat-button-toggle-group name="chartSelected" [(ngModel)]="chartSelected">
-                        <mat-button-toggle value="pie">{{selectedEvaluation.data | date:'dd/LL/yyyy'}}
-                        </mat-button-toggle>
-                        <mat-button-toggle value="compare">Comparativo</mat-button-toggle>
-                    </mat-button-toggle-group>
+        <div *ngIf="selectedEvaluation">
+            <h4 style="text-align: center; color: blue;">
+                {{selectedEvaluation.data | date:'dd/LL/yyyy'}}
+            </h4>
+            <div *ngIf="showChart">
+                <div style="text-align: center; color: blue;">
+                    <div>
+                        <mat-button-toggle-group name="chartSelected" [(ngModel)]="chartSelected">
+                            <mat-button-toggle value="pie">{{selectedEvaluation.data | date:'dd/LL/yyyy'}}
+                            </mat-button-toggle>
+                            <mat-button-toggle value="compare">Comparativo</mat-button-toggle>
+                        </mat-button-toggle-group>
+                    </div>
+                    <div *ngIf="chartSelected=='pie'">
+                        <mat-label i18n>% Gordura Desejada <small>[{{gorduraDesejada}}]</small> : </mat-label>
+                        <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
+                            [disabled]="!fatChanged" (change)="getNewEvaluation()">
+                        </mat-slider>
+                        <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
+                            <mat-icon>edit</mat-icon>
+                        </button>
+                        <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
+                            <mat-icon>save</mat-icon>
+                        </button>
+                    </div>
                 </div>
-                <div *ngIf="chartSelected=='pie'">
-                    <mat-label i18n>% Gordura Desejada <small>[{{gorduraDesejada}}]</small> : </mat-label>
-                    <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
-                        [disabled]="!fatChanged" (change)="getNewEvaluation()">
-                    </mat-slider>
-                    <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
-                        <mat-icon>edit</mat-icon>
-                    </button>
-                    <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
-                        <mat-icon>save</mat-icon>
-                    </button>
+                <!-- charts -->
+                <div class="chart-pie" *ngIf="chartSelected=='pie'">
+                    <app-chart-pie [values]="single"></app-chart-pie>
+                    <app-chart-pie [values]="single2"></app-chart-pie>
                 </div>
-            </div>
-            <!-- charts -->
-            <div class="chart-pie" *ngIf="chartSelected=='pie'">
-                <app-chart-pie [values]="single"></app-chart-pie>
-                <app-chart-pie [values]="single2"></app-chart-pie>
-            </div>
-            <div *ngIf="chartSelected=='compare'">
-                <app-chart-compare [id]="student.id" [protocolo]="protocolo" [percgd]="gorduraDesejada" [evaluations]="evaluation">
-                </app-chart-compare>
+                <div *ngIf="chartSelected=='compare'">
+                    <app-chart-compare [id]="student.id" [protocolo]="protocolo" [percgd]="gorduraDesejada"
+                        [evaluations]="evaluation">
+                    </app-chart-compare>
+                </div>
             </div>
         </div>
 
