rfactoring na anamnese

--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -146,7 +146,7 @@
             [expanded]="videoExpanded">
                 <mat-expansion-panel-header>
                     <mat-panel-title i18n="Title">
-                        TESTES ORTOPÉDICOS - videos
+                        TESTES ORTOPÉDICOS &nbsp;&nbsp;&nbsp; [videos]
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 <mat-card>
