--- a/src/app/avaliation/av-dash/av-dash.component.scss
+++ b/src/app/avaliation/av-dash/av-dash.component.scss
@@ -14,6 +14,10 @@
   background-color: rgba(247, 238, 238, 0.704);
 }
 
+.mat-card-subtitle{
+  text-align: left;
+}
+
 @media only screen and (min-width: 1024px) {
   .section {
     width: 50%;
