--- a/src/app/avaliation/risco/qpaf/qpaf.component.html
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.html
@@ -106,7 +106,7 @@
             <em i18n>Fonte: Sociadade Canadense de Fisiologia do Exercicio, in ACSM (2003)</em>
 
             <div class="footer">
-                <button mat-mini-fab color="primary" (click)="goBack()">
+                <button type="button" mat-mini-fab color="primary" (click)="goBack()">
                     <mat-icon>undo</mat-icon>
                 </button>
                 <button mat-mini-fab color="primary">  
