--- a/src/app/avaliation/anamenese/anamenese.component.html
+++ b/src/app/avaliation/anamenese/anamenese.component.html
@@ -94,7 +94,11 @@
             </mat-card-content>
           </mat-card>
           <mat-action-row>
-            <button mat-button color="primary" i18n="Botão" (click)="nextStep()">Seguinte</button>
+            <button mat-button color="primary" i18n="Botão" (click)="nextStep()" 
+            matTooltip="Guardar e avançar."
+            matTooltipPosition="above"
+            matTooltipHideDelay="2000">
+              Guardar<strong>&#8628;</strong></button>
           </mat-action-row>
         </form>
       </mat-expansion-panel>
@@ -203,7 +207,11 @@
 
           <mat-action-row>
             <button mat-button color="warn" (click)="prevStep()" i18n="Label">Anterior</button>
-            <button mat-button color="primary" (click)="nextStep()" i18n="Label">Seguinte</button>
+            <button mat-button color="primary" (click)="nextStep()" i18n="Label"
+            matTooltip="Guardar e avançar."
+            matTooltipPosition="above"
+            matTooltipHideDelay="2000">
+            Guardar <strong>&#8628;</strong></button>
           </mat-action-row>
         </form>
       </mat-expansion-panel>
@@ -384,7 +392,11 @@
 
           <mat-action-row>
             <button mat-button color="warn" (click)="prevStep()" i18n="Label">Anterior</button>
-            <button mat-button color="primary" (click)="nextStep()" i18n="Label">Seguinte</button>
+            <button mat-button color="primary" (click)="nextStep()" i18n="Label"
+            matTooltip="Guardar e avançar."
+            matTooltipPosition="above"
+            matTooltipHideDelay="2000">
+            Guardar <strong>&#8628;</strong></button>
           </mat-action-row>
         </form>
       </mat-expansion-panel>
@@ -521,7 +533,11 @@
 
           <mat-action-row>
             <button mat-button color="warn" (click)="prevStep()" i18n="Label">Anterior</button>
-            <button mat-button color="primary" (click)="nextStep()" i18n="Label">Seguinte</button>
+            <button mat-button color="primary" (click)="nextStep()" i18n="Label"
+            matTooltip="Guardar e avançar."
+            matTooltipPosition="above"
+            matTooltipHideDelay="2000">
+            Guardar <strong>&#8628;</strong></button>
           </mat-action-row>
         </form>
       </mat-expansion-panel>
@@ -717,7 +733,11 @@
 
           <mat-action-row>
             <button mat-button color="warn" (click)="prevStep()" i18n="Label">Anterior</button>
-            <button mat-button color="primary" (click)="nextStep()" i18n="Label">Seguinte</button>
+            <button mat-button color="primary" (click)="nextStep()" i18n="Label"
+            matTooltip="Guardar e avançar."
+            matTooltipPosition="above"
+            matTooltipHideDelay="2000">
+            Guardar <strong>&#8628;</strong></button>
           </mat-action-row>
         </form>
       </mat-expansion-panel>
@@ -778,7 +798,11 @@
 
           <mat-action-row>
             <button mat-button color="warn" (click)="prevStep()" i18n="Label">Anterior</button>
-            <button mat-button color="primary" (click)="nextStep()" i18n="Label">Fim</button>
+            <button mat-button color="primary" (click)="nextStep()" i18n="Label"
+            matTooltip="Guardar."
+            matTooltipPosition="above"
+            matTooltipHideDelay="2000">
+            Guardar</button>
           </mat-action-row>
         </form>
       </mat-expansion-panel>
